[gd_scene load_steps=4 format=3 uid="uid://big74nrrtlctf"]

[ext_resource type="Script" path="res://scripts/editorDeMapas.gd" id="1"]
[ext_resource type="Script" path="res://scripts/camara.gd" id="2"]
[ext_resource type="TileSet" path="res://Tiles/tile.res" id="3"]

[node name="EditorDeMapas" type="Node2D"]
script = ExtResource("1")

[node name="loDeLosTiles" type="TileMap" parent="."]
tile_set = ExtResource("3")
format = 2
layer_0/tile_data = PackedInt32Array(-917523, 2, 0, -917522, 2, 0, -917521, 2, 0, -917520, 2, 0, -917519, 2, 0, -917518, 2, 0, -917517, 2, 0, -917516, 2, 0, -917515, 2, 0, -917514, 2, 0, -917513, 2, 0, -917512, 2, 0, -917511, 2, 0, -917510, 2, 0, -917509, 2, 0, -917508, 2, 0, -917507, 2, 0, -917506, 2, 0, -917505, 2, 0, -983040, 2, 0, -983039, 2, 0, -983038, 2, 0, -983037, 2, 0, -983036, 2, 0, -983035, 2, 0, -983034, 2, 0, -983033, 2, 0, -983032, 2, 0, -983031, 2, 0, -983030, 2, 0, -983029, 2, 0, -983028, 2, 0, -983027, 2, 0, -983026, 2, 0, -983025, 2, 0, -983024, 2, 0, -851987, 2, 0, -917488, 2, 0, -786451, 2, 0, -851952, 2, 0, -720915, 2, 0, -786416, 2, 0, -655379, 2, 0, -720880, 2, 0, -589843, 2, 0, -655344, 2, 0, -524307, 2, 0, -589808, 2, 0, -458771, 2, 0, -524272, 2, 0, -393235, 2, 0, -458736, 2, 0, -327699, 2, 0, -393200, 2, 0, -262163, 2, 0, -327664, 2, 0, -196627, 2, 0, -262128, 2, 0, -131091, 2, 0, -196592, 2, 0, -65555, 2, 0, -131056, 2, 0, -19, 2, 0, -65520, 2, 0, 65517, 2, 0, 16, 2, 0, 131053, 2, 0, 65552, 2, 0, 196589, 2, 0, 131088, 2, 0, 262125, 2, 0, 196624, 2, 0, 327661, 2, 0, 262160, 2, 0, 393197, 2, 0, 327696, 2, 0, 458733, 2, 0, 393232, 2, 0, 524269, 2, 0, 458768, 2, 0, 589805, 2, 0, 524304, 2, 0, 655341, 2, 0, 589840, 2, 0, 720877, 2, 0, 655376, 2, 0, 786413, 2, 0, 786414, 2, 0, 786415, 2, 0, 786416, 2, 0, 786417, 2, 0, 786418, 2, 0, 786419, 2, 0, 786420, 2, 0, 786421, 2, 0, 786422, 2, 0, 786423, 2, 0, 786424, 2, 0, 786425, 2, 0, 786426, 2, 0, 786427, 2, 0, 786428, 2, 0, 786429, 2, 0, 786430, 2, 0, 786431, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0)

[node name="camara" type="Camera2D" parent="."]
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("2")

[node name="botonera" type="Control" parent="camara"]
layout_mode = 3
anchors_preset = 0
offset_left = 400.0
offset_top = -360.0
offset_right = 540.0
offset_bottom = 360.0

[node name="Sprite2D" type="Sprite2D" parent="camara/botonera"]
position = Vector2(70, 50)

[node name="ListaDeSprites" type="ItemList" parent="camara/botonera"]
layout_mode = 0
offset_left = 34.983
offset_top = 120.0
offset_right = 106.983
offset_bottom = 332.0
auto_height = true

[node name="Guardar" type="Button" parent="camara/botonera"]
layout_mode = 0
offset_left = 10.0
offset_top = 560.0
offset_right = 130.0
offset_bottom = 590.0
text = "Guardar"

[node name="Cargar" type="Button" parent="camara/botonera"]
layout_mode = 0
offset_left = 10.0
offset_top = 620.0
offset_right = 130.0
offset_bottom = 650.0
text = "Cargar"

[node name="Salir" type="Button" parent="camara/botonera"]
layout_mode = 0
offset_left = 10.0
offset_top = 680.0
offset_right = 130.0
offset_bottom = 710.0
text = "Salir"

[connection signal="item_selected" from="camara/botonera/ListaDeSprites" to="." method="_on_ListaDeSprites_item_selected"]
